fix: overflow de x em alguns browser

--- a/global.css
+++ b/global.css
@@ -26,6 +26,7 @@ body, html {
     height: 100dvh;
     background-color: var(--cor-background);
     color: black;
+    overflow-x: hidden;
 }
 h1 {
     color: var(--cor-destaque);
